--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,1 +1,6 @@
-KOKOKO
+<%= form_tag "stub" do %>
+    <div class="section">
+        <%= label_tag 'artist_name' %> 
+        <%= text_field 'Artist Name' %>
+    </div>
+<% end %>
