--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag "stub" do %>
     <div class="section">
         <%= label_tag 'artist_name' %> 
-        <%= text_field 'Artist Name' %>
+        <%= text_field :search, :artist_name  %>
     </div>
 <% end %>
