--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag "stub" do %>
+<%= form_tag :search do %>
     <div class="section">
         <%= label_tag 'artist_name' %> 
         <%= text_field :search, :artist_name  %>
