--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,6 +1,7 @@
-<% form_tag :search do %>
+<form>
     <div class="section">
         <%= label_tag 'artist_name' %> 
         <%= text_field :search, :artist_name  %>
     </div>
-<% end %>
+</form>
+    
