--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,40 @@
 <form>
+    <h2 class='h2'>Target Information<h2>  
     <div class="section">
         <%= label_tag 'artist_name' %> 
         <%= text_field :search, :artist_name  %>
     </div>
+    <div class="section">
+        <%= label_tag 'album_name' %> 
+        <%= text_field :search, :album_name  %>
+    </div>
+    <div class="section">
+        <%= label_tag 'album_upc' %> 
+        <%= text_field :search, :album_upc  %>
+    </div>
+    <div class="section">
+        <%= label_tag 'track_name' %> 
+        <%= text_field :search, :track_name  %>
+    </div>
+    <div class="section">
+        <%= label_tag 'track_isrc' %> 
+        <%= text_field :search, :track_isrc  %>
+    </div>
+    <h2 class='h2'>Affiliate Information</h2>
+    <div class="section">
+        <%= label_tag 'amazon_affiliate' %> 
+        <%= text_field :search, :amazon_affiliate  %>
+    </div>
+    <div class="section">
+        <%= label_tag 'itunes_affiliate' %> 
+        <%= text_field :search, :itunes_affiliate  %>
+    </div>
+    <div class="section">
+        <%= submit_tag 'Submit' %>
+    </div>
 </form>
+
+<div id="results">
+    
+</div>
     
