--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
 <head>
 	<title></title>
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+    <%= stylesheet_link_tag :all %>
 </head>
 
 <body>
