--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -46,4 +46,18 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+.search_form {
 
+}
+.section {
+
+}
+.search_form label {
+
+}
+.search_form input[type='text'] {
+
+}
+.search_form input[type='submit'] {
+
+}
