more styles and markup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 </head>
 
 <body>
-    <%= yield %>
+    <div id='container' class='container'>
+        <%= yield %>
+    </div>    
 </body>
 </html>
 
