--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<form id="search_form" class="search_form">
+<form id="search_form" class="search_form rounded_corners">
     <h2 class='h2'>Target Information<h2>  
     <div class="section">
         <%= label_tag 'artist_name' %> 
