--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <form id="search_form" class="search_form rounded_corners">
-    <h2 class='h2'>Target Information<h2>  
+    <h2 class='h2 center'>Target Information</h2>  
     <div class="section">
         <%= label_tag 'artist_name' %> 
         <%= text_field :search, :artist_name  %>
@@ -20,7 +20,7 @@
         <%= label_tag 'track_isrc' %> 
         <%= text_field :search, :track_isrc  %>
     </div>
-    <h2 class='h2'>Affiliate Information</h2>
+    <h2 class='h2 center'>Affiliate Information</h2>
     <div class="section">
         <%= label_tag 'amazon_affiliate' %> 
         <%= text_field :search, :amazon_affiliate  %>
