--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,32 +1,32 @@
 <form id="search_form" class="search_form rounded_corners">
     <h2 class='h2 center mb20 mt20'>Target Information</h2>  
     <div class="section">
-        <%= label_tag 'artist_name' %> 
+        <%= label_tag 'artist_name', 'Artist Name' %> 
         <%= text_field :search, :artist_name  %>
     </div>
     <div class="section">
-        <%= label_tag 'album_name' %> 
+        <%= label_tag 'album_name', 'Album Name' %> 
         <%= text_field :search, :album_name  %>
     </div>
     <div class="section">
-        <%= label_tag 'album_upc' %> 
+        <%= label_tag 'album_upc', 'Album UPC' %> 
         <%= text_field :search, :album_upc  %>
     </div>
     <div class="section">
-        <%= label_tag 'track_name' %> 
+        <%= label_tag 'track_name', 'Track Name' %> 
         <%= text_field :search, :track_name  %>
     </div>
     <div class="section">
-        <%= label_tag 'track_isrc' %> 
+        <%= label_tag 'track_isrc', 'Track ISRC' %> 
         <%= text_field :search, :track_isrc  %>
     </div>
     <h2 class='h2 center mb20 mt20'>Affiliate Information</h2>
     <div class="section">
-        <%= label_tag 'amazon_affiliate' %> 
+        <%= label_tag 'amazon_affiliate', 'Amazon' %> 
         <%= text_field :search, :amazon_affiliate  %>
     </div>
     <div class="section">
-        <%= label_tag 'itunes_affiliate' %> 
+        <%= label_tag 'itunes_affiliate', 'iTunes' %> 
         <%= text_field :search, :itunes_affiliate  %>
     </div>
     <div class="section">
