--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -30,7 +30,7 @@
         <%= text_field :search, :itunes_affiliate  %>
     </div>
     <div class="section">
-        <%= submit_tag 'Submit' %>
+        <%= submit_tag 'Submit', :class => 'mt20 rounded_corners' %>
     </div>
 </form>
 
