--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -37,4 +37,8 @@
 <div id="results">
     
 </div>
-    
+   <script type="text/javascript" charset="utf-8">
+     $(document).load(function(){
+        alert('jquery test');
+       });
+   </script>
