--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -38,7 +38,7 @@
     
 </div>
    <script type="text/javascript" charset="utf-8">
-     $(document).load(function(){
+     $(document).ready(function(){
         alert('jquery test');
        });
    </script>
