--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<form id="search_form" class="search_form rounded_corners">
+<form id="search_form" class="search_form rounded_corners" method="post" action="index">
     <h2 class='h2 center mb20 mt20'>Target Information</h2>  
     <div class="section">
         <%= label_tag 'artist_name', 'Artist Name' %> 
