--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<form id="search_form" class="search_form rounded_corners" method="post" action="">
+<form id="search_form" class="search_form rounded_corners" method="post" action="index">
    <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 
     <h2 class='h2 center mb20 mt20'>Target Information</h2>  
