quote out affiliate

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -21,16 +21,17 @@
     <div class="section">
         <%= label_tag 'track_isrc', 'Track ISRC' %> 
         <%= text_field :search, :track_isrc  %>
-    </div>
+      </div>
+    <!--> 
     <h2 class='h2 center mb20 mt20'>Affiliate Information</h2>
     <div class="section">
-        <%= label_tag 'amazon_affiliate', 'Amazon' %> 
-        <%= text_field :search, :amazon_affiliate  %>
+        <%#= label_tag 'amazon_affiliate', 'Amazon' %> 
+        <%#= text_field :search, :amazon_affiliate  %>
     </div>
     <div class="section">
-        <%= label_tag 'itunes_affiliate', 'iTunes' %> 
-        <%= text_field :search, :itunes_affiliate  %>
-    </div>
+        <%#= label_tag 'itunes_affiliate', 'iTunes' %> 
+        <%#= text_field :search, :itunes_affiliate  %>
+      </div> -->
     <div class="section">
         <%= submit_tag 'Submit', :class => 'rounded_corners mt20' %>
     </div>
