--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -33,7 +33,7 @@
         <%#= text_field :search, :itunes_affiliate  %>
       </div> -->
     <div class="section">
-        <%= submit_tag 'Submit', :class => 'rounded_corners mt20' %>
+      <%= submit_tag 'Submit', :class => 'rounded_corners mt20', :id => 'submit' %>
     </div>
   <% end %>
 <div id="results">
@@ -41,6 +41,11 @@
 </div>
    <script type="text/javascript" charset="utf-8">
      $(document).ready(function(){
-   
+       $('#submit').click(function(){
+         var data = $('search_form').serialize();
+         $.post('search/search_results', data, function(response_data){
+            $('#result').html(response_data);
+           });
+        }); 
        });
    </script>
