added return false to ajax call

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -46,6 +46,7 @@
          $.post('search/search_results', data, function(response_data){
             $('#result').html(response_data);
            });
+         return false;
         }); 
        });
    </script>
