--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -4,7 +4,7 @@
     <h2 class='h2 center mb20 mt20'>Target Information</h2>  
     <div class="section">
         <%= label_tag 'artist_name', 'Artist Name' %> 
-        <%= text_field :search, :artist_name  %>
+        <%= text_field :search, :artist_name, :class => 'text_field'  %>
     </div>
     <div class="section">
         <%= label_tag 'album_name', 'Album Name' %> 
