--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -3,24 +3,24 @@
 
     <h2 class='h2 center mb20 mt20'>Target Information</h2>  
     <div class="section">
-        <%= label_tag 'artist_name', 'Artist Name' %> 
+      <%= label_tag 'artist_name', 'Artist Name', :class => 'label_tag' %> 
         <%= text_field :search, :artist_name, :class => 'text_field'  %>
     </div>
     <div class="section">
-        <%= label_tag 'album_name', 'Album Name' %> 
-        <%= text_field :search, :album_name  %>
+      <%= label_tag 'album_name', 'Album Name', :class => 'label_tag' %> 
+        <%= text_field :search, :album_name, :class => 'text_field'  %>
     </div>
     <div class="section">
-        <%= label_tag 'album_upc', 'Album UPC' %> 
-        <%= text_field :search, :album_upc  %>
+        <%= label_tag 'album_upc', 'Album UPC', :class => 'label_tag' %> 
+        <%= text_field :search, :album_upc, :class => 'text_field'  %>
     </div>
     <div class="section">
-        <%= label_tag 'track_name', 'Track Name' %> 
-        <%= text_field :search, :track_name  %>
+        <%= label_tag 'track_name', 'Track Name', :class => 'label_tag' %> 
+        <%= text_field :search, :track_name, :class => 'text_field'  %>
     </div>
     <div class="section">
-        <%= label_tag 'track_isrc', 'Track ISRC' %> 
-        <%= text_field :search, :track_isrc  %>
+        <%= label_tag 'track_isrc', 'Track ISRC', :class => 'label_tag' %> 
+        <%= text_field :search, :track_isrc, :class => 'text_field'  %>
       </div>
     <!-- 
     <h2 class='h2 center mb20 mt20'>Affiliate Information</h2>
