--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -75,7 +75,7 @@ body {
     color: white;
     font-size: 20px;
     padding: 10px;
-    margin: auto;
+    margin: 20px auto 0;
     display: block;
     cursor: pointer;
     width: 140px;
