--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,4 +1,4 @@
-<% form_tag url_for(:controller => :search, :action => :search_results ), :id => "search_form", :class => "search_form rounded_corners"  do %>
+<% form_tag url_for(:controller => :search, :action => :search_results ), :id => "search_form" do %>
    <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 
     <h2 class='h2 center mb20 mt20'>Target Information</h2>  
