--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,9 @@
         </ul>
         <ul class="header-right">
           <% if current_user %>
+            <li><%= link_to("offers" ,offers_path) %></li>
             <li><%= link_to("account",account_path) %></li>
-            <li><%= link_to("logout",user_session_path, :method => :delete) %></li>
+            <li><%= link_to("logout" ,user_session_path, :method => :delete) %></li>
           <% else %>
             <li><%= link_to("login" ,new_user_session_path) %></li>
             <li><%= link_to("signup",new_account_path)      %></li>
