--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -36,9 +36,9 @@
       <%= submit_tag 'Submit', :class => 'rounded_corners mt20', :id => 'submit' %>
     </div>
   <% end %>
-<div id="results">
+<form id="results">
     
-</div>
+</form>
    <script type="text/javascript" charset="utf-8">
      $(document).ready(function(){
        $('#submit').click(function(){
@@ -49,4 +49,9 @@
          return false;
         }); 
        });
+   function parseResponse(response) {
+     response.each(function(){
+        
+     });  
+   } 
    </script>
