--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -42,9 +42,9 @@
    <script type="text/javascript" charset="utf-8">
      $(document).ready(function(){
        $('#submit').click(function(){
-         var data = $('search_form').serialize();
+         var data = $('#search_form').serialize();
          $.post('search/search_results', data, function(response_data){
-     //       $('#results').html(response_data);
+            $('#results').html(response_data);
            console.info(response_data);
            });
          return false;
