--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,9 +1,9 @@
-<%= form.label :email %><br />
-<%= form.text_field :email %><br />
+<%= form.label :email %>
+<%= form.text_field :email %>
 <br />
-<%= form.label :password, form.object.new_record? ? nil : "Change password" %><br />
-<%= form.password_field :password %><br />
-<br />
-<%= form.label :password_confirmation %><br />
-<%= form.password_field :password_confirmation %><br />
+<%= form.label :password, form.object.new_record? ? nil : "Change password" %>
+<%= form.password_field :password %>
+
+<%= form.label :password_confirmation %>
+<%= form.password_field :password_confirmation %>
 
