escape correct lines

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -49,10 +49,10 @@
           });
 
 
-           /*$('#results').html(response_data);
+           //$('#results').html(response_data);
     
            });
-         return false;*/
+         return false;
         }); 
        });
    function parseResponse(response) {
