--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -44,8 +44,8 @@
        $('#submit').click(function(){
          var data = $('#search_form').serialize();
          $.post('search/search_results', data, function(response_data){
-          response_data['repository'].each(function(){
-            console.log(this['results']['label']); 
+          response_data['repository'][0]['results'].each(function(){
+            console.log(this['label']); 
           });
 
 
