--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
 	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
   <%= stylesheet_link_tag 'application' %>
   <script type="text/javascript" charset="utf-8" src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js'></script>  
+  <script type="text/javascript" src="/javascripts/beatbox.js"></script>
 </head>
 
 <body>
