--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -44,14 +44,14 @@
       beatbox.search(data, function(response_data) {
         $container = $('#results');
 
-        if (data.length == 0) {
+        if (response_data.length == 0) {
           $container.text('Not available online.');
           return;
         }
 
         $container.text('Buy: ');
         
-        jQuery.each(data, function(index, r) {
+        jQuery.each(response_data, function(index, r) {
           var $a = $('<a>');
           $a.text(r.label);
           $a.attr('href', r.url);
