Styled login/signup.

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,7 @@
 <% form_tag url_for(:controller => :search, :action => :search_results ), :id => "search_form" do %>
   <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
 
-  <h2>Search:</h2>  
+  <h2>Search</h2>  
   <p class="description mb20">
     Search the web for where music is sold and we'll do what we can to connect you with people who are selling it.  
   </p>
