--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
   <script>
-    beatbox.init();
+    beatbox.init({ 'amazon': 'amazonaffiliatecode', 'test': 'hi', 'itunes': 'itunesaffiliatecode' });
   </script>
 
 <% form_tag url_for(:controller => :search, :action => :search_results ), :id => "search_form" do %>
