--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -30,7 +30,7 @@
     <%= label_tag 'track_isrc', 'Track ISRC', :class => 'label_tag' %> 
     <%= text_field :search, :track_isrc, :class => 'text_field'  %>
   </div>
-  <div class="section">
+  <div class="section form_control">
     <%= submit_tag 'Submit', :class => 'rounded_corners mt20', :id => 'submit' %>
   </div>
 <% end %>
