added jquery to_json lib

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   <%= stylesheet_link_tag 'application' %>
   <script type="text/javascript" charset="utf-8" src='https://ajax.googleapis.com/ajax/libs/jquery/1.6.0/jquery.min.js'></script>  
   <script type="text/javascript" src="/javascripts/beatbox.js"></script>
+  <%= javascript_include_tag 'jquery.json-2.2.min' %>
 </head>
 
 <body>
