More style tweaks

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,5 +3,7 @@
 <% form_for @user, :url => account_path do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
-  <%= f.submit "Update", :class => :rounded_corners %>
+  <div class="section form_control">
+    <%= f.submit "Update", :class => :rounded_corners %>
+  </div>
 <% end %>
