--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -9,6 +9,8 @@
 <% form_for @user, :url => account_path do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
-  <%= f.submit "Register", :class => :rounded_corner %>
+  <div class="section form_control">
+    <%= f.submit "Register", :class => :rounded_corners %>
+  </div>
 <% end %>
 
