--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -40,7 +40,7 @@
    <script type="text/javascript" charset="utf-8">
      $(document).ready(function(){
        $('#submit').click(function(){
-         beatbox.search({artist_name : $('#search_artist_name'), album_name : $('#search_album_name')}, function(response_data) {
+         beatbox.search({ 'artist_name' : $('#search_artist_name').val(), 'album_name' : $('#search_album_name').val()}, function(response_data) {
            $container = $('#results');
 
            if (response_data.length == 0) {
