--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,6 +34,11 @@
       <div id="content" class="content rounded_corners">
         <%= yield %>
       </div>
+      <div id="results">
+        <h2>Results</h2>
+        <p class="description mb20">Please choose your poison below</p>
+        <div id='body_of_results' style="display:none;"></div>
+      </div>
 
     </div>    
 </body>
