--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -34,14 +34,16 @@
     <%= submit_tag 'Submit', :class => 'rounded_corners mt20', :id => 'submit' %>
   </div>
 <% end %>
-<div id="results">
-    
-</div>
+
+
    <script type="text/javascript" charset="utf-8">
      $(document).ready(function(){
        $('#submit').click(function(){
          beatbox.search({ 'artist_name' : $('#search_artist_name').val(), 'album_name' : $('#search_album_name').val()}, function(response_data) {
-           $container = $('#results');
+           $enclosure = $('#results');
+           $enclosure.show();
+
+           $container = $('#body_of_results');
 
            if (response_data.length == 0) {
            $container.text('Not available online.');
