more styles for response

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -46,10 +46,12 @@
            $container = $('#body_of_results');
 
            if (response_data.length == 0) {
+           $enclosure.removeClass('success').removeClass('fail').addClass('fail');
            $container.text('Not available online.');
            return;
            }
 
+           $enclosure.removeClass('success').removeClass('fail').addClass('success');
            $container.text('Buy: ');
 
            jQuery.each(response_data, function(index, r) {
