--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -1,7 +1,11 @@
-<h1>Create Offer</h1>
+<h2 class="mb20">Create Offer</h2>
 <% form_for @offer, :url => offers_path do |f| %>
   <%= f.error_messages %>
+
   <%= render :partial => "form", :object => f %>
-  <%= f.submit("Create", :class => :rounded_corner ) %>
+
+  <div class="section form_control">
+    <%= f.submit("Create", :class => :rounded_corner ) %>
+  </div>
 <% end %>
 
