--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -1,4 +1,5 @@
-<h1>Offer <%= h(@offer.name) %></h1>
+<h2 class="mb20">Offer <%= h(@offer.name) %></h2>
+
 <% form_for @offer, :url => offer_path(@offer) do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
