--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -164,6 +164,15 @@ h2 {
   margin-bottom: 10px;
 }
 
+h3 {
+  font-size: 125%;
+  margin-bottom: 10px;
+}
+
+.bold {
+  font-weight: bold;
+}
+
 /* Corner position button quick fixes */
 #content {
   position: relative;
@@ -176,4 +185,24 @@ h2 {
   -moz-border-radius: 10px 0 5px 0; /* Firefox */
   -webkit-border-radius: 10px 0 5px 0; /* Safari, Chrome */
   border-radius: 10px 0 5px 0; /* CSS3 */
+}
+
+table {
+  text-align: left;
+  table-layout: fixed;
+}
+
+table th, td {
+  padding: 4px 10px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+table tr:first-child td {
+  padding-top: 10px;
+}
+
+table th {
+  border-bottom: 2px solid orange;
 }
