--- a/app/views/offers/new.html.erb
+++ b/app/views/offers/new.html.erb
@@ -5,7 +5,7 @@
   <%= render :partial => "form", :object => f %>
 
   <div class="section form_control">
-    <%= f.submit("Create", :class => :rounded_corner ) %>
+    <%= f.submit("Create", :class => 'rounded_corners mt20' ) %>
   </div>
 <% end %>
 
