--- a/app/views/offers/show.html.erb
+++ b/app/views/offers/show.html.erb
@@ -3,5 +3,8 @@
 <% form_for @offer, :url => offer_path(@offer) do |f| %>
   <%= f.error_messages %>
   <%= render :partial => "form", :object => f %>
-  <%= f.submit("Update", :class => :rounded_corner ) %>
+  
+  <div class="section form_control">
+    <%= f.submit "Update", :class => 'rounded_corners mt20' %>
+  </div>
 <% end %>
